# InspectorWidgetProcessor

./: .gitignore  .gitmodules  CMakeLists.txt  InspectorWidgetProcessorAddon.cc  InspectorWidgetProcessorWrapper.cc  InspectorWidgetProcessorWrapper.h  README.md  fixup_bundle.sh  git-clone-submodules.sh  index.js  package.json  test.js
cli/: CMakeLists.txt  InspectorWidgetProcessorCLI.cpp
cmake/: FindLinkedDirectories.cmake  FindMacPorts.cmake  FindOpenCL.cmake  FindTBB.cmake
doc/: doxyfile.cmake
lib/: CMakeLists.txt  InspectorWidgetProcessor.cpp  InspectorWidgetProcessor.h  InspectorWidgetProcessorAPI.h  InspectorWidgetProcessorCommandParser.h
tests/: CMakeLists.txt
